--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<style>
+      .accio {
+        width: 150px;
+        height: 150px;
+        background-color: black;
+      }
+      
+      .hello-accio {
+        color: white;
+        margin-left: 32px;
+        padding: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <main class="accio" id="job">
+      <p class="hello-accio">Hello Accio Job</p>
+    </main>
+	  
     <script type="text/javascript" src="./script.js">
 </script>
 
